--- a/test.html
+++ b/test.html
@@ -4,34 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-        .conatiner {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  color: red;
-}
-
-    </style>
+    <link rel="stylesheet" href="./test.css" />
   </head>
   <body>
     <div class="container">
-      <p>
-        Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh
-        onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
-      </p>
-
-      <p>
-        Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot
-        courgette tatsoi pea sprouts fava bean collard greens dandelion okra
-        wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
-      </p>
-
-      <p>
-        Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce
-        kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus
-        winter purslane kale. Celery potato scallion desert raisin horseradish
-        spinach carrot soko.
-      </p>
+      <div class="card 1">
+        <p>
+          Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh
+          onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+        </p>
+        <div class="btn">
+          <button type="submit">Prev</button>
+          <button type="submit">Next</button>
+        </div>
+      </div>
+      
     </div>
   </body>
 </html>
